# grok2api

./: main.py  pyproject.toml  readme.md  requirements-storage.txt  requirements.txt
app/api/v1/: chat.py
app/api/v1/admin_api/: token.py
app/api/v1/public_api/: imagine.py  video.py
app/core/: http_client.py  json_compat.py  pydantic_compat.py  storage.py
app/services/grok/services/: chat.py  image.py  image_edit.py  video.py
app/services/reverse/: accept_tos.py  app_chat.py  assets_delete.py  assets_download.py  assets_list.py  assets_upload.py  media_post.py  nsfw_mgmt.py  rate_limits.py  set_birth.py  video_upscale.py  ws_imagine.py  ws_livekit.py
app/services/reverse/utils/: headers.py  session.py
app/services/token/: manager.py
docs/: README.en.md
scripts/: termux-run.sh  termux-setup.sh
