[project]
name = "grok2api"
version = "1.5.0"
description = "Grok2API rebuilt with FastAPI, fully aligned with the latest web call format. Supports streaming and non-streaming chat, image generation/editing, deep thinking, token pool concurrency, and automatic load balancing."
readme = "readme.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.3",
    "aiohttp-socks>=0.11.0",
    "certifi>=2024.8.30",
    "fastapi>=0.119.0,<0.126.0",
    "loguru>=0.7.3",
    "pydantic>=1.10.13,<2.0.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.21",
    "uvicorn>=0.37.0",
    "websockets>=16.0",
]

[project.optional-dependencies]
speed = [
    "curl-cffi>=0.13.0",
    "orjson>=3.11.4",
]
storage = [
    "aiomysql>=0.2.0",
    "asyncpg>=0.31.0",
    "greenlet>=3.3.1",
    "redis>=6.4.0",
    "sqlalchemy>=2.0.46",
]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
]
